# starter-kit

./: .env.example  .gitignore  .lintstagedrc  .prettierignore  CLAUDE.md  RULES.md  decisions.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  projects.json  setup.sh  tsconfig.json  vitest.config.ts
.claude/: mcp-template.json  settings.json
.claude/agents/: agent-guardian.md  ai-auditor.md  brain.md  brand-strategist.md  code-reviewer.md  copywriter.md  creative-director.md  cto-advisor.md  db-architect.md  dependency-sentinel.md  design-critic.md  design-director.md  design-generator.md  design-scout.md  feature-planner.md  formation-generator.md  growth-architect.md  i18n-manager.md  knowledge-cartographer.md  motion-director.md  persona-stakeholder.md  persona-user-primary.md  persona-user-secondary.md  photo-director.md  project-auditor.md  project-init.md  prompt-engineer.md  seo-specialist.md  social-strategist.md  stripe-expert.md  tech-watcher.md  ux-researcher.md
.claude/commands/: audit-project.md  batch.md  bughunter.md  check.md  debug.md  eval.md  health-all.md  migrate.md  pr.md  preview.md  propagate.md  release.md  ship.md  simplify.md  (+1 more)
docs/: BRAIN_DASHBOARD_SPEC.md  FORMATION_AI_ARCHITECT.md  ROADMAP.md  TIPS_PRO.md  WORKFLOW_CERVEAU.md
e2e/: home.spec.ts
src/: proxy.ts
templates/: CLAUDE_NEXTJS.md  CLAUDE_TEMPLATE.md
templates/python-ai-agent/: pyproject.toml
templates/python-ai-agent/core/: config.py
templates/python-ai-agent/core/llm/: anthropic_provider.py  provider.py  router.py
(+168 files in other folders)
