[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kura-agents"
version = "0.1.0"
description = "KURA AI Agent Ecosystem — Anti-doping compliance agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["kura_agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["kura_agents/tests"]
